--- a/universitylist.html
+++ b/universitylist.html
@@ -4,6 +4,53 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Get Indian Universities by State</title>
+  <style>
+ 
+  body {
+    font-family: Arial, sans-serif;
+    padding: 20px;
+  }
+
+  select, button {
+    display: block;
+    height: 30px;
+    width: 250px;
+    border-radius: 10px;
+    margin-bottom: 10px;
+  }
+
+  button {
+    background-color: antiquewhite;
+    position: relative;
+    left: 70px;
+  }
+
+  ul {
+    padding-left: 20px;
+  }
+
+  /* Media query for mobile screens (max width 600px) */
+  @media (max-width: 600px) {
+    h1 {
+      font-size: 20px;
+      text-align: center;
+    }
+
+    select, button {
+      width: 100%;
+      font-size: 16px;
+      left: 0 !important;
+    }
+
+    button {
+      margin-top: 10px;
+    }
+
+    ul {
+      font-size: 14px;
+    }
+  }
+</style>
 </head>
 <body>
   <h1>Get University by Search</h1>
@@ -107,3 +154,4 @@
   </script>
 </body>
 </html>
+
